...
                contentDescription = "Logo de la aplicación",
                modifier = Modifier.size(180.dp) // Tamaño aumentado
            )
            Spacer(Modifier.height(24.dp))
            // --------------------------

            Text("Iniciar Sesión", style = MaterialTheme.typography.headlineSmall, color = Color.White)
            Spacer(Modifier.height(16.dp))

            OutlinedTextField(
                value = email,
                onValueChange = onEmailChange,
                label = { Text("Correo Electrónico", color = Color.White) },
...

            ElevatedButton(
                onClick = onGoRegister,
                modifier = Modifier.fillMaxWidth(),
                colors = ButtonDefaults.buttonColors(containerColor = Color(0xFF4CAF50))
            ) {
                Text("Crear cuenta")
            }
        }

        if (errorMsg != null) {
            AlertDialog(
                onDismissRequest = onClearError,
...
