...
        }
    ) {
        Scaffold(
            containerColor = mainBg,
            topBar = {
                TopAppBar(
                    title = { Text("Panel de Administrador") },
                    navigationIcon = { 
                        IconButton(onClick = { scope.launch { drawerState.open() } }) { 
                            Icon(Icons.Default.Menu, "Menú", tint = textColor) 
                        } 
                    },
                    colors = TopAppBarDefaults.topAppBarColors(
...
